Add Ratio.ipynb & FS.ipynb files

--- a/Vndirect_Ratio.ipynb
+++ b/Vndirect_Ratio.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_path = ['Stock_Price.csv']\n",
+    "stock_path = ['Stock_Ratio.csv']\n",
     "for a in stock_path:\n",
     "    if os.path.exists(a):\n",
     "        os.remove(a)"
@@ -44,35 +44,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_stock_pice(stock_code, trans_date):\n",
-    "    url = 'https://finfo-api.vndirect.com.vn/v4/stock_prices?q=floor:HOSE,HNX,UPCOM~code:' + stock_code + '~date:' + trans_date\n",
+    "def get_stock_ratio(stock_code, report_date):\n",
+    "    url = 'https://finfo-api.vndirect.com.vn/v4/ratios?q=group:stock~code:' + stock_code + '~reportDate:' + report_date\n",
     "    data = get_web(url).json()\n",
     "    page_size = data['totalElements']\n",
     "    \n",
     "    #Resize array\n",
-    "    url = url + '&sort=date~code&size=' + str(page_size)\n",
+    "    url = url + '&sort=reportDate~code:asc~itemCode&size=' + str(page_size)\n",
     "    data = get_web(url).json()\n",
     "\n",
-    "    stock_price_list = []\n",
+    "    stock_ratio_list = []\n",
     "    for d in data['data']:\n",
     "        try:\n",
-    "            date_time = d['date']\n",
-    "            stock_type = d['type']\n",
-    "            stock_floor = d['floor']\n",
+    "            date_time = d['reportDate']\n",
+    "            stock_type = d['group']\n",
     "            stock_id = d['code']\n",
-    "            open_price = d['adOpen']\n",
-    "            close_price = d['adClose']\n",
-    "            min_price = d['adLow']\n",
-    "            max_price = d['adHigh']\n",
-    "            avg_price = d['adAverage']\n",
-    "            vol = d['nmVolume']\n",
-    "            value = d['nmValue']\n",
+    "            item_id = d['itemCode']\n",
+    "            item_name = d['itemName']\n",
+    "            value = d['value']\n",
     "\n",
-    "            stock_price_list.append([date_time, stock_type, stock_floor, stock_id, open_price, close_price, min_price, max_price, avg_price, vol, value])\n",
+    "            stock_ratio_list.append([date_time, stock_type, stock_id, item_id, item_name, value])\n",
     "        except Exception as err:\n",
     "            print(err)\n",
     "    \n",
-    "    return stock_price_list"
+    "    return stock_ratio_list"
    ]
   },
   {
@@ -81,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_trading_day():\n",
-    "    url = 'https://finfo-api.vndirect.com.vn/v4/trading_calendars?'\n",
+    "def get_trading_day_eoq():\n",
+    "    url = 'https://finfo-api.vndirect.com.vn/v4/trading_calendars?q=endDayOfQuarter:true'\n",
     "    data = get_web(url).json()\n",
     "    page_size = data['totalElements']\n",
     "    \n",
@@ -90,16 +85,16 @@
     "    url = url + '&sort=date&size=' + str(page_size)\n",
     "    data = get_web(url).json()\n",
     "    \n",
-    "    trading_day_list = []\n",
+    "    trading_day_eoq_list = []\n",
     "    for d in data['data']:\n",
     "        try:\n",
     "            date = d['date']\n",
     "\n",
-    "            trading_day_list.append(date)\n",
+    "            trading_day_eoq_list.append(date)\n",
     "        except Exception as err:\n",
     "            print(err)\n",
     "    \n",
-    "    return trading_day_list"
+    "    return trading_day_eoq_list"
    ]
   },
   {
@@ -120,21 +115,22 @@
     "    for s in stock_list:\n",
     "        stock_code = s + ',' + stock_code\n",
     "        \n",
-    "    # Prep interval days\n",
-    "    start_date = date(2022,2,25).strftime('%Y-%m-%d')\n",
-    "    end_date = date(2022,2,28).strftime('%Y-%m-%d')\n",
+    "    # Prep report date\n",
+    "    #date_list = ['2021-12-31']\n",
+    "    start_date = date(2021,12,31).strftime('%Y-%m-%d')\n",
+    "    end_date = date(2021,12,31).strftime('%Y-%m-%d')\n",
     "    #date_list = pd.date_range(start_date, end_date-timedelta(days=0), freq='d').strftime('%Y-%m-%d').to_list()\n",
-    "    date_list = [dt for dt in get_trading_day() if start_date <= dt <= end_date]\n",
-    "    trans_date = ''\n",
+    "    date_list = [dt for dt in get_trading_day_eoq() if start_date <= dt <= end_date]\n",
+    "    report_date = ''\n",
     "    for d in date_list:\n",
-    "        trans_date = d + ',' + trans_date\n",
+    "        report_date = d + ',' + report_date\n",
     "        \n",
-    "    data = get_stock_pice(stock_code, trans_date)\n",
+    "    data = get_stock_ratio(stock_code, report_date)\n",
     "    for d in data:\n",
     "        detail.append(d)\n",
     "\n",
     "# Prep csv\n",
-    "header = [['date_time', 'stock_type', 'stock_floor', 'stock_code', 'open_price', 'close_price', 'min_price', 'max_price', 'avg_price', 'volume', 'value']]\n",
+    "header = [['date_time', 'stock_type', 'stock_code', 'item_id', 'item_name', 'value']]\n",
     "with open(stock_path[0], 'w', newline='', encoding='utf-8-sig') as f:\n",
     "    write = csv.writer(f)\n",
     "    write.writerows(header)\n",
