--- a/Vndirect_Stock.ipynb
+++ b/Vndirect_Stock.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "def get_industry_list():\n",
-    "    url = 'https://finfo-api.vndirect.com.vn/v4/industry_classification?industryLevel'\n",
+    "    url = 'https://finfo-api.vndirect.com.vn/v4/industry_classification?'\n",
     "    data = get_web(url).json()\n",
     "    page_size = data['totalElements']\n",
     "    \n",
@@ -51,7 +51,7 @@
     "    url = url + '&size=' + str(page_size)\n",
     "    data = get_web(url).json()\n",
     "\n",
-    "    cate_list = []\n",
+    "    industry_list = []\n",
     "    i = 0\n",
     "    for d in data['data']:\n",
     "        try:\n",
@@ -62,11 +62,11 @@
     "            ind_name_vie = d['vietnameseName']\n",
     "            element_count = d['totalCount']\n",
     "\n",
-    "            cate_list.append([ind_id, ind_lvl, parent_ind_id, ind_name_eng, ind_name_vie, element_count])\n",
+    "            industry_list.append([ind_id, ind_lvl, parent_ind_id, ind_name_eng, ind_name_vie, element_count])\n",
     "        except Exception as err:\n",
     "            print(err)\n",
     "    \n",
-    "    return cate_list"
+    "    return industry_list"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "def get_stock_list():\n",
-    "    url = 'https://finfo-api.vndirect.com.vn/v4/stocks?q=type:stock,ifc~floor:HOSE,HNX,UPCOM'\n",
+    "    url = 'https://finfo-api.vndirect.com.vn/v4/stocks?q=type:STOCK~floor:HOSE,HNX,UPCOM~status:listed' # I don't really care about OTC and delisted stock\n",
     "    data = get_web(url).json()\n",
     "    page_size = data['totalElements']\n",
     "    \n",
@@ -84,16 +84,16 @@
     "    url = url + '&size=' + str(page_size)\n",
     "    data = get_web(url).json()\n",
     "\n",
-    "    cate_list = []\n",
+    "    stock_list = []\n",
     "    for d in data['data']:\n",
     "        try:\n",
     "            stock_type = d['type']\n",
     "            stock_floor = d['floor']\n",
-    "            stock_code = d['code']\n",
+    "            stock_code = '' if 'code' not in d else d['code']\n",
     "            stock_stt = d['status']\n",
-    "            listed_date = d['listedDate']\n",
+    "            listed_date = '' if 'listedDate' not in d else d['listedDate']\n",
     "            corp_id = d['companyId']\n",
-    "            corp_name_eng = None if 'companyNameEng' not in d else d['companyNameEng']\n",
+    "            corp_name_eng = '' if 'companyNameEng' not in d else d['companyNameEng']\n",
     "            corp_name_vie = d['companyName']\n",
     "            \n",
     "            #industry\n",
@@ -104,11 +104,11 @@
     "                ind_name_eng = a['englishName']\n",
     "                ind_name_vie = a['vietnameseName']\n",
     "\n",
-    "            cate_list.append([stock_type, stock_floor, stock_code, stock_stt, listed_date, corp_id, corp_name_eng, corp_name_vie, ind_id, ind_name_eng, ind_name_vie])\n",
+    "            stock_list.append([stock_type, stock_floor, stock_code, stock_stt, listed_date, corp_id, corp_name_eng, corp_name_vie, ind_id, ind_name_eng, ind_name_vie])\n",
     "        except Exception as err:\n",
     "            print(err)\n",
     "\n",
-    "    return cate_list"
+    "    return stock_list"
    ]
   },
   {
